fix footer spacing

--- a/public/style.css
+++ b/public/style.css
@@ -68,6 +68,9 @@ footer ul li{
 	display: inline-block;
 	text-align: center;
 }
-h1{
-	margin-top: 40000px;
+.intro{
+	position: absolute;
+  	top: 35%;
+  	left: 50%;
+  	transform: translate(-35%, -35%);
 }
